# go-beancount

./: BUILD.bazel  CLAUDE.md  Dockerfile  MODULE.bazel  PLAN.md  README.md  go.mod  go.sum
cmd/beancheck/: BUILD.bazel  beancheck_e2e_test.sh  main.go  main_test.go
cmd/beancount-lsp/: BUILD.bazel  codeaction.go  codeaction_test.go  completion.go  completion_context.go  completion_context_test.go  completion_test.go  debounce.go  definition.go  definition_test.go  diagnostics.go  diagnostics_test.go  docsync.go  docsync_test.go  formatting.go  formatting_test.go  handlers.go  hover.go  hover_test.go  inlayhint.go  inlayhint_test.go  inventory_hover.go  locate.go  locate_test.go  main.go  plugins_fixture_test.go  plugins_test.go  position.go  position_test.go  recover.go  references.go  references_test.go  rename.go  rename_test.go  server.go  server_test.go  smoke_test.go  symbol.go  symbol_test.go  watch.go  (+1 more)
cmd/beanfile/: BUILD.bazel  main.go  main_test.go
cmd/beanfmt/: BUILD.bazel  beanfmt_e2e_test.sh  main.go  main_test.go
cmd/beanimport/: BUILD.bazel  config.go  diag.go  fixture_test.go  main.go  main_test.go  pipeline.go
cmd/beanprice/: BUILD.bazel  main.go  main_test.go
cmd/beanprice/testdata/: with-meta.beancount
cmd/beanquery/: BUILD.bazel  csv.go  csv_test.go  format.go  format_test.go  json.go  json_test.go  main.go  main_test.go  plugin_test.go
internal/atomicfile/: BUILD.bazel  atomicfile.go  atomicfile_test.go
internal/formatopt/: BUILD.bazel  display_context.go  number.go  number_test.go  options.go  options_test.go  width.go  width_test.go
internal/options/: BUILD.bazel  defaults.go  kinds.go  options.go  options_test.go  parse.go
pkg/ast/: BUILD.bazel  account.go  account_test.go  ast.go  ast_test.go  balance_expr.go  balance_expr_test.go  booking.go  booking_test.go  clone.go  clone_test.go  cost.go  cost_holder_test.go  cost_test.go  directive_accessor_test.go  directives.go  glob.go  ledger.go  ledger_test.go  load.go  load_test.go  load_variants_test.go  lower.go  lower_integration_test.go  lower_mergeactivetags_test.go  lower_parsedate_test.go  lower_test.go  metadata.go  option.go  optvalues.go  optvalues_test.go  order.go  overlay_test.go  per_unit_cost_test.go  precision_profile.go  precision_profile_load_test.go  precision_profile_test.go  resolve.go  resolve_test.go  source.go  (+1 more)
pkg/ast/asttest/: BUILD.bazel  options.go  options_test.go
pkg/compat/beancompat/: BUILD.bazel  allowlist.go  check_fixtures_test.go  denylist.go  fixture.go  match.go  match_test.go  parse_fixtures_test.go  runner.go  serialize.go  serialize_test.go
pkg/distribute/comment/: BUILD.bazel  comment.go  comment_test.go  doc.go  emit.go
pkg/distribute/dedup/: BUILD.bazel  dedup.go  dedup_test.go  equality.go
pkg/distribute/merge/: BUILD.bazel  doc.go  existing.go  merge.go  merge_test.go  newfile.go  patches.go
pkg/distribute/route/: BUILD.bazel  doc.go  format.go  override.go  route.go  route_test.go
pkg/format/: BUILD.bazel  consistency_test.go  diff_test.go  format.go  format_displaycontext_test.go  format_integration_test.go  format_render_commas_test.go  format_test.go  option.go  option_test.go  quantize.go  quantize_test.go
pkg/format/testdata/: canonical.golden.beancount  comma.beancount  comma.golden.beancount  messy.beancount  messy.golden.beancount  special_strings.beancount
pkg/importer/: BUILD.bazel  apply_test.go  concurrency_test.go  dispatch.go  dispatch_test.go  factory_test.go  fake_test.go  importer.go  kind_registry_test.go  registry.go  registry_test.go
pkg/importer/hook/: BUILD.bazel  apply_concurrency_test.go  chain.go  chain_test.go  concurrency_test.go  factory_test.go  fake_test.go  hook.go  hook_test.go  instance_registry_test.go  kind_registry_concurrency_test.go  kind_registry_test.go  registry.go  registry_test.go
pkg/importer/importerutil/: BUILD.bazel  balancewith.go  balancewith_test.go  doc.go  stampmetadata.go  stampmetadata_test.go
pkg/inventory/: BUILD.bazel  booking.go  booking_test.go  cost.go  cost_test.go  decimal.go  doc.go  errors.go  errors_test.go  idempotence_test.go  integration_test.go  inventory.go  inventory_test.go  lot.go  lot_test.go  matcher.go  matcher_test.go  position.go  position_test.go  reducer.go  reducer_test.go  state_trace_test.go  weight.go  weight_test.go
pkg/inventory/inspect/: BUILD.bazel  inspect.go  inspect_test.go
pkg/inventory/testdata/: idempotency_e2e.beancount  inspection_e2e.beancount
pkg/loader/: BUILD.bazel  loader.go  loader_test.go  option.go  overlay_test.go
pkg/loader/booking/: BUILD.bazel  assemble_internal_test.go  plugin.go  plugin_test.go
pkg/postproc/: BUILD.bazel  apply.go  apply_test.go  doc.go  registry.go  registry_test.go  testhelpers.go
pkg/postproc/api/: BUILD.bazel  doc.go  plugin.go  plugin_test.go
pkg/postproc/goplug/: BUILD.bazel  doc.go  goplug.go  goplug_test.go
pkg/printer/: BUILD.bazel  printer.go  printer_displaycontext_test.go  printer_render_commas_test.go  printer_test.go
pkg/query/: ARCHITECTURE.md  BUILD.bazel  aggregate_test.go  concurrency_test.go  doc.go  entry_test.go  errors_test.go  helpers_test.go  query.go  query_test.go  result.go
pkg/query/api/: BUILD.bazel  doc.go  (+2 more)
pkg/quote/: BUILD.bazel  doc.go  event.go  fetch.go  fetch_test.go  registry.go  registry_test.go  scheduler.go
pkg/session/: BUILD.bazel  doc.go  session.go  session_test.go  subscribe_test.go
pkg/syntax/: BUILD.bazel  balance_expr.go  balance_expr_test.go  error.go  file.go  node.go  node_kind.go  node_kind_test.go  node_test.go  parser.go  parser_integration_test.go  parser_test.go  scanner.go  scanner_integration_test.go  scanner_test.go  token.go  token_kind.go  token_kind_test.go  token_test.go  trivia.go
pkg/validation/: BUILD.bazel  account.go  account_test.go  balance.go  balance_test.go  custom.go  custom_test.go  doc.go  errors.go  from_inventory.go  integration_test.go  options.go  options_test.go  order.go  order_test.go  pad.go  pad_test.go  txn.go  txn_test.go  validation.go  validation_options_test.go  validation_test.go
(+676 files in other folders)
