module(
    name = "go-beancount",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "gobeancount_pip",
    python_version = "3.12",
    requirements_lock = "//third_party/python:requirements_lock.txt",
)
use_repo(pip, "gobeancount_pip")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "co_honnef_go_tools", "com_github_burntsushi_toml", "com_github_cockroachdb_apd_v3", "com_github_google_go_cmp", "com_github_mattn_go_runewidth", "dev_lsp_go_jsonrpc2", "dev_lsp_go_protocol", "dev_lsp_go_uri", "in_gopkg_yaml_v3", "org_golang_x_text", "org_golang_x_vuln")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "beancompat",
    build_file = "//third_party/beancompat:beancompat.BUILD",
    sha256 = "7341482556757659b767d5b04a834c0c4e640c8a153ac64d6fade3499699d607",
    strip_prefix = "beancompat-e4f805bdfa6268ac75d664ca5d920513d70b4ec6",
    urls = ["https://github.com/TJesionowski/beancompat/archive/e4f805bdfa6268ac75d664ca5d920513d70b4ec6.tar.gz"],
)
