load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

go_library(
    name = "beancheck_lib",
    srcs = ["main.go"],
    importpath = "github.com/yugui/go-beancount/cmd/beancheck",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ast",
        "//pkg/loader",
    ],
)

go_binary(
    name = "beancheck",
    embed = [":beancheck_lib"],
    visibility = ["//visibility:public"],
)

# keep
sh_test(
    name = "beancheck_e2e_test",
    srcs = ["beancheck_e2e_test.sh"],
    args = ["$(rootpath :beancheck)"],
    data = [":beancheck"],
)
