load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "beancount-lsp_lib",
    srcs = [
        "codeaction.go",
        "completion.go",
        "completion_context.go",
        "debounce.go",
        "definition.go",
        "diagnostics.go",
        "docsync.go",
        "formatting.go",
        "handlers.go",
        "hover.go",
        "inventory_hover.go",
        "locate.go",
        "main.go",
        "position.go",
        "recover.go",
        "references.go",
        "rename.go",
        "server.go",
        "symbol.go",
        "watch.go",
    ],
    importpath = "github.com/yugui/go-beancount/cmd/beancount-lsp",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ast",
        "//pkg/ext/goplug",
        "//pkg/ext/goplug/goplugflag",
        "//pkg/ext/postproc/sprout",
        "//pkg/ext/postproc/std",
        "//pkg/format",
        "//pkg/inventory",
        "//pkg/inventory/inspect",
        "//pkg/printer",
        "//pkg/session",
        "//pkg/syntax",
        "@dev_lsp_go_jsonrpc2//:jsonrpc2",
        "@dev_lsp_go_protocol//:protocol",
        "@dev_lsp_go_uri//:uri",
    ],
)

go_binary(
    name = "beancount-lsp",
    embed = [":beancount-lsp_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "beancount-lsp_test",
    srcs = [
        "codeaction_test.go",
        "completion_context_test.go",
        "completion_test.go",
        "definition_test.go",
        "diagnostics_test.go",
        "docsync_test.go",
        "formatting_test.go",
        "hover_test.go",
        "locate_test.go",
        "plugins_fixture_test.go",
        "plugins_test.go",
        "position_test.go",
        "references_test.go",
        "rename_test.go",
        "server_test.go",
        "smoke_test.go",
        "symbol_test.go",
        "watch_test.go",
    ],
    # The ok .so fixture is added on platforms that support Go plugins; on
    # others the data dep is dropped and the plugin integration test self-skips
    # at runtime via the same GOOS check pkg/ext/goplug uses.
    data = select({
        "@platforms//os:linux": ["//pkg/ext/goplug/testdata/ok"],
        "@platforms//os:macos": ["//pkg/ext/goplug/testdata/ok"],
        "@platforms//os:freebsd": ["//pkg/ext/goplug/testdata/ok"],
        "//conditions:default": [],
    }),
    embed = [":beancount-lsp_lib"],
    # testhelpers exposes postproc.ResetForTest and compiles
    # plugins_fixture_test.go, which probes the registry after loading the .so.
    gotags = ["testhelpers"],
    deps = [
        "//pkg/ast",
        "//pkg/ext/postproc",
        "//pkg/session",
        "//pkg/syntax",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@dev_lsp_go_jsonrpc2//:jsonrpc2",
        "@dev_lsp_go_protocol//:protocol",
        "@dev_lsp_go_uri//:uri",
    ],
)
