load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

go_library(
    name = "beanfmt_lib",
    srcs = ["main.go"],
    importpath = "github.com/yugui/go-beancount/cmd/beanfmt",
    visibility = ["//visibility:private"],
    deps = ["//pkg/format"],
)

go_binary(
    name = "beanfmt",
    embed = [":beanfmt_lib"],
    visibility = ["//visibility:public"],
)

# keep
sh_test(
    name = "beanfmt_e2e_test",
    srcs = ["beanfmt_e2e_test.sh"],
    args = ["$(rootpath :beanfmt)"],
    data = [":beanfmt"],
)
