load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "beanimport_lib",
    srcs = [
        "config.go",
        "diag.go",
        "main.go",
        "pipeline.go",
    ],
    importpath = "github.com/yugui/go-beancount/cmd/beanimport",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ast",
        "//pkg/ext/goplug",
        "//pkg/ext/goplug/goplugflag",
        "//pkg/importer",
        "//pkg/importer/hook",
        "//pkg/importer/hook/std/classify",
        "//pkg/importer/hook/std/predict",
        "//pkg/importer/std/csvimp",
        "//pkg/printer",
        "@com_github_burntsushi_toml//:toml",
    ],
)

go_binary(
    name = "beanimport",
    embed = [":beanimport_lib"],
    visibility = ["//visibility:public"],
)

# The staticimporter .so fixture is added on platforms that support
# Go plugins; on others the data dep is dropped and the plugin
# integration test self-skips at runtime via the same GOOS check
# pkg/ext/goplug uses.
go_test(
    name = "beanimport_test",
    srcs = [
        "fixture_test.go",
        "main_test.go",
    ],
    data = glob(
        ["testdata/**"],
        exclude = ["testdata/staticimporter/**"],
    ) + select({
        # keep
        "@platforms//os:linux": ["//cmd/beanimport/testdata/staticimporter"],
        "@platforms//os:macos": ["//cmd/beanimport/testdata/staticimporter"],
        "@platforms//os:freebsd": ["//cmd/beanimport/testdata/staticimporter"],
        "//conditions:default": [],
    }),
    embed = [":beanimport_lib"],
    deps = [
        "//pkg/ast",
        "//pkg/importer",
        "//pkg/importer/hook",
    ],
)
