load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "beanprice_lib",
    srcs = ["main.go"],
    importpath = "github.com/yugui/go-beancount/cmd/beanprice",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ast",
        "//pkg/ext/goplug",
        "//pkg/loader",
        "//pkg/quote",
        "//pkg/quote/api",
        "//pkg/quote/meta",
        "//pkg/quote/pricedb",
        "//pkg/quote/std/ecb",
    ],
)

go_binary(
    name = "beanprice",
    embed = [":beanprice_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "beanprice_test",
    srcs = ["main_test.go"],
    data = glob(["testdata/**"]),
    embed = [":beanprice_lib"],
    deps = [
        "//pkg/ast",
        "//pkg/quote",
        "//pkg/quote/api",
        "@com_github_cockroachdb_apd_v3//:apd",
    ],
)
