load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "beanquery_lib",
    srcs = ["main.go"],
    importpath = "github.com/yugui/go-beancount/cmd/beanquery",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ast",
        "//pkg/ext/goplug",
        "//pkg/ext/postproc/sprout",
        "//pkg/ext/postproc/std",
        "//pkg/loader",
        "//pkg/query",
        "//pkg/query/env/sprout",
        "//pkg/query/env/std",
        "//pkg/query/types",
        "@com_github_mattn_go_runewidth//:go-runewidth",
    ],
)

go_binary(
    name = "beanquery",
    embed = [":beanquery_lib"],
    visibility = ["//visibility:public"],
)

# The queryfunc .so fixture is added on platforms that support Go
# plugins; on others the data dep is dropped and the plugin integration
# test self-skips at runtime via the same GOOS check pkg/ext/goplug uses.
go_test(
    name = "beanquery_test",
    srcs = ["main_test.go"],
    data = select({
        "@platforms//os:linux": ["//cmd/beanquery/testdata/queryfunc"],
        "@platforms//os:macos": ["//cmd/beanquery/testdata/queryfunc"],
        "@platforms//os:freebsd": ["//cmd/beanquery/testdata/queryfunc"],
        "//conditions:default": [],
    }),
    embed = [":beanquery_lib"],
)
