load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "atomicfile",
    srcs = ["atomicfile.go"],
    importpath = "github.com/yugui/go-beancount/internal/atomicfile",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "atomicfile_test",
    srcs = ["atomicfile_test.go"],
    deps = [":atomicfile"],
)
