load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ast",
    srcs = [
        "ast.go",
        "directives.go",
        "load.go",
        "lower.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/ast",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/syntax",
        "@com_github_cockroachdb_apd_v3//:apd",
    ],
)

go_test(
    name = "ast_test",
    srcs = [
        "ast_test.go",
        "cost_test.go",
        "load_test.go",
        "lower_integration_test.go",
        "lower_test.go",
    ],
    embed = [":ast"],
    deps = [
        "//pkg/syntax",
        "@com_github_cockroachdb_apd_v3//:apd",
    ],
)
