load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ast",
    srcs = [
        "account.go",
        "ast.go",
        "booking.go",
        "directives.go",
        "ledger.go",
        "load.go",
        "lower.go",
        "option.go",
        "order.go",
        "resolve.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/ast",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/syntax",
        "@com_github_cockroachdb_apd_v3//:apd",
    ],
)

go_test(
    name = "ast_test",
    srcs = [
        "account_test.go",
        "ast_test.go",
        "booking_test.go",
        "cost_test.go",
        "ledger_test.go",
        "load_test.go",
        "load_variants_test.go",
        "lower_integration_test.go",
        "lower_test.go",
        "resolve_test.go",
    ],
    embed = [":ast"],
    deps = [
        "//pkg/syntax",
        "@com_github_cockroachdb_apd_v3//:apd",
    ],
)
