load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ast",
    srcs = [
        "account.go",
        "ast.go",
        "balance_expr.go",
        "booking.go",
        "clone.go",
        "cost.go",
        "directives.go",
        "glob.go",
        "ledger.go",
        "load.go",
        "lower.go",
        "metadata.go",
        "option.go",
        "optvalues.go",
        "order.go",
        "precision_profile.go",
        "source.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/ast",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/loadopt",
        "//pkg/syntax",
        "@com_github_cockroachdb_apd_v3//:apd",
    ],
)

go_test(
    name = "ast_test",
    srcs = [
        "account_test.go",
        "ast_test.go",
        "balance_expr_test.go",
        "booking_test.go",
        "clone_test.go",
        "cost_holder_test.go",
        "cost_test.go",
        "directive_accessor_test.go",
        "ledger_test.go",
        "load_test.go",
        "lower_integration_test.go",
        "lower_mergeactivetags_test.go",
        "lower_parsedate_test.go",
        "lower_test.go",
        "optvalues_test.go",
        "overlay_test.go",
        "per_unit_cost_test.go",
        "precision_profile_load_test.go",
        "precision_profile_test.go",
        "total_cost_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":ast"],
    deps = [
        "//pkg/syntax",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
