load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "format",
    srcs = [
        "format.go",
        "option.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/format",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/formatopt",
        "//pkg/syntax",
    ],
)

go_test(
    name = "format_test",
    srcs = [
        "format_test.go",
        "option_test.go",
    ],
    embed = [":format"],
    deps = ["//internal/formatopt"],
)
