load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "format",
    srcs = [
        "format.go",
        "option.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/format",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/formatopt",
        "//pkg/syntax",
    ],
)

go_test(
    name = "format_test",
    srcs = [
        "consistency_test.go",
        "diff_test.go",
        "format_integration_test.go",
        "format_test.go",
        "option_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":format"],
    deps = [
        "//internal/formatopt",
        "//pkg/ast",
        "//pkg/printer",
        "//pkg/syntax",
    ],
)
