load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "format",
    srcs = [
        "format.go",
        "option.go",
        "quantize.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/format",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/formatopt",
        "//pkg/syntax",
        "@com_github_cockroachdb_apd_v3//:apd",
    ],
)

go_test(
    name = "format_test",
    srcs = [
        "consistency_test.go",
        "diff_test.go",
        "format_displaycontext_test.go",
        "format_integration_test.go",
        "format_render_commas_test.go",
        "format_test.go",
        "option_test.go",
        "quantize_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":format"],
    deps = [
        "//internal/formatopt",
        "//pkg/ast",
        "//pkg/printer",
        "//pkg/syntax",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_google_go_cmp//cmp",
    ],
)
