load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "importer",
    srcs = [
        "dispatch.go",
        "importer.go",
        "registry.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/importer",
    visibility = ["//visibility:public"],
    deps = ["//pkg/ast"],
)

go_test(
    name = "importer_test",
    srcs = [
        "apply_test.go",
        "concurrency_test.go",
        "dispatch_test.go",
        "factory_test.go",
        "fake_test.go",
        "kind_registry_test.go",
    ],
    embed = [":importer"],
    race = "on",
    deps = [
        "//pkg/ast",
        "@com_github_google_go_cmp//cmp",
    ],
)
