load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "loader",
    srcs = [
        "loader.go",
        "option.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/loader",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/options",
        "//pkg/ast",
        "//pkg/ext/postproc",
        "//pkg/ext/postproc/api",
        "//pkg/loader/booking",
        "//pkg/validation/balance",
        "//pkg/validation/document",
        "//pkg/validation/pad",
        "//pkg/validation/validations",
    ],
)

go_test(
    name = "loader_test",
    srcs = ["loader_test.go"],
    deps = [
        ":loader",
        "//pkg/ast",
    ],
)
